fix(demo): white space fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,5 @@ $backgroundColor: #333333;
 
 .message .code-background {
   background-color: $backgroundColor;
+  white-space: initial;
 }
